--- a/position.html
+++ b/position.html
@@ -8,19 +8,48 @@
         width: 200px;
         border: 1px solid black;
         background-color: chocolate;
-        position: fixed;
-        top:0;
+        position: absolute;
+        top: 100px;
         left: 100px;
+        animation-: changeColor;
+        animation-duration: 10s;
+        animation-iteration-count: 2;
       }
       .box2 {
-        height: 50px;
-        width: 50px;
+        height: 100px;
+        width: 100px;
         border: 1px solid black;
         background-color: rgb(78, 159, 92);
         position: absolute;
         top: 50px;
         left: 50px;
-      
+      }
+      @keyframes changeColor {
+        0% {
+          left: 0px;
+          top: 0px;
+          border-radius: 12.5%;
+        }
+        25% {
+          left: 300px;
+          top: 0px;
+          border-radius: 25%;
+        }
+        50% {
+          top: 300px;
+          left: 300px;
+          border-radius: 47.5%;
+        }
+        75% {
+          left: 0px;
+          top: 300px;
+          border-radius: 50%;
+        }
+        100% {
+          top: 0px;
+          left: 0;
+          border-radius: 100%;
+        }
       }
     </style>
   </head>
@@ -28,62 +57,5 @@
     <div class="box">
       <div class="box2"></div>
     </div>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, atque
-      consequatur qui perferendis voluptatibus velit incidunt commodi. Officia
-      sunt ducimus ut! Illo eos tempora ipsum commodi omnis at quo aperiam.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, atque
-      consequatur qui perferendis voluptatibus velit incidunt commodi. Officia
-      sunt ducimus ut! Illo eos tempora ipsum commodi omnis at quo aperiam.
-    </p>
-
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, atque
-      consequatur qui perferendis voluptatibus velit incidunt commodi. Officia
-      sunt ducimus ut! Illo eos tempora ipsum commodi omnis at quo aperiam.
-    </p>
-
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, atque
-      consequatur qui perferendis voluptatibus velit incidunt commodi. Officia
-      sunt ducimus ut! Illo eos tempora ipsum commodi omnis at quo aperiam.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, atque
-      consequatur qui perferendis voluptatibus velit incidunt commodi. Officia
-      sunt ducimus ut! Illo eos tempora ipsum commodi omnis at quo aperiam.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, atque
-      consequatur qui perferendis voluptatibus velit incidunt commodi. Officia
-      sunt ducimus ut! Illo eos tempora ipsum commodi omnis at quo aperiam.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, atque
-      consequatur qui perferendis voluptatibus velit incidunt commodi. Officia
-      sunt ducimus ut! Illo eos tempora ipsum commodi omnis at quo aperiam.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, atque
-      consequatur qui perferendis voluptatibus velit incidunt commodi. Officia
-      sunt ducimus ut! Illo eos tempora ipsum commodi omnis at quo aperiam.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, atque
-      consequatur qui perferendis voluptatibus velit incidunt commodi. Officia
-      sunt ducimus ut! Illo eos tempora ipsum commodi omnis at quo aperiam.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, atque
-      consequatur qui perferendis voluptatibus velit incidunt commodi. Officia
-      sunt ducimus ut! Illo eos tempora ipsum commodi omnis at quo aperiam.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, atque
-      consequatur qui perferendis voluptatibus velit incidunt commodi. Officia
-      sunt ducimus ut! Illo eos tempora ipsum commodi omnis at quo aperiam.
-    </p>
   </body>
 </html>
